fix icon vertical alignment

--- a/src/options/OptionTip/OptionTip.module.css
+++ b/src/options/OptionTip/OptionTip.module.css
@@ -18,6 +18,7 @@
 
 .icon {
   color: #666;
+  font-size: 0;
 
   @media (prefers-color-scheme: dark) {
     color: #aaa;
